RESOLVED FIXED65279
Web Inspector: [REGRESSION] [Chromium] Opening link in new tab does not work properly.
https://bugs.webkit.org/show_bug.cgi?id=65279
Summary Web Inspector: [REGRESSION] [Chromium] Opening link in new tab does not work ...
Vsevolod Vlasov
Reported 2011-07-27 13:07:48 PDT
Opening link in new tab does not work properly. Instead of opening a new tab, inspector tries to open a new window which is usually blocked by pop-up blocker. abarth: FYI, this was broken in https://bugs.webkit.org/show_bug.cgi?id=62778.
Attachments
Patch (1.80 KB, patch)
2011-07-27 13:12 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-07-27 13:12:04 PDT
WebKit Review Bot
Comment 2 2011-07-27 21:34:24 PDT
Comment on attachment 102176 [details] Patch Clearing flags on attachment: 102176 Committed r91901: <http://trac.webkit.org/changeset/91901>
WebKit Review Bot
Comment 3 2011-07-27 21:34:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.