Web Inspector: [REGRESSION] [Chromium] Opening link in new tab does not work properly. https://bugs.webkit.org/show_bug.cgi?id=65279

Reviewed by Pavel Feldman.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::open):


Canonical link: https://commits.webkit.org/81063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91901 268f45cc-cd09-0410-ab3c-d52691b4dbfc